Fix fdo#49508 incorrect square gradients in slideshow.

Make sure client code sees isotrophic aspect ratio for the
square gradient case. This somehow never worked.